@@ -28,3 +28,4 @@ updates:
       - dependency-name: "org.ow2.asm:asm-tree"
       - dependency-name: "com.blogspot.mydailyjava:weak-lock-free"
       - dependency-name: "org.slf4j:*"
+      - dependency-name: "com.squareup.okhttp3:okhttp"
