@@ -25,17 +25,34 @@
 package co.elastic.apm.agent.okhttp;
 
 import co.elastic.apm.agent.httpclient.AbstractHttpClientInstrumentationTest;
+import co.elastic.apm.agent.util.Version;
+import co.elastic.apm.agent.util.VersionUtils;
 import okhttp3.OkHttpClient;
 import okhttp3.Request;
 import org.junit.Before;
 
+import java.util.Objects;
+
 public class OkHttp3ClientInstrumentationTest extends AbstractHttpClientInstrumentationTest {
 
+    private Version okhttpVersion;
     private OkHttpClient client;
 
     @Before
     public void setUp() {
         client = new OkHttpClient();
+        String versionString = VersionUtils.getVersion(OkHttpClient.class, "com.squareup.okhttp3", "okhttp");
+        okhttpVersion = Version.of(Objects.requireNonNullElse(versionString, "4.0.0"));
+    }
+
+    @Override
+    protected boolean isErrorOnCircularRedirectSupported() {
+        return okhttpVersion.compareTo(Version.of("3.6.0")) > -1;
+    }
+
+    @Override
+    protected boolean isIpv6Supported() {
+        return okhttpVersion.compareTo(Version.of("3.3.0")) > -1;
     }
 
     @Override
