@@ -35,6 +35,7 @@ to assist with such efforts.
 * Update existing Hibernate Search 6 instrumentation to the final relase
 * The <<config-use-path-as-transaction-name, `use_path_as_transaction_name`>> option is now dynamic
 * Flushing internal and micrometer metrics before the agent shuts down - {pull}1658[#1658]
+* Support for OkHttp 4.4+ -  {pull}1672[#1672]
 
 [float]
 ===== Bug fixes
